Fix dark mode.

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@
 	--color-gray-90: #333;
 
 	--background-color: #fff;
+	--bg-accent: #eee;
 
 	--text-color: var(--color-gray-90);
 	--text-color-link: #082840;
@@ -32,6 +33,7 @@
 		--text-color-link-visited: #a6a6f8;
 
 		--background-color: #15202b;
+		--bg-accent: #101c28;
 	}
 }
 
@@ -190,9 +192,9 @@ table.weekly-calendar tr td:nth-child(1) {
 }
 
 table.weekly-calendar tr td:nth-child(2) {
-  background: #eee;
   padding: 1rem;
   font-weight: 600;
+	background: var(--bg-accent);
 }
 
 pre,
@@ -335,17 +337,12 @@ header {
 }
 
 .spoiler {
-  color: white;            /* hide text */
-	border: 1px solid gray;    /* border around the spoiler */
-  transition: color 0.3s ease; /* optional fade effect */
-}
-
-.spoiler::selection {
-  color: black;            /* revealed text color */
-  background-color: gray; /* keep background the same */
+  color: transparent;
+	overflow-x: auto;
+	border: 1px solid gray;
+  transition: color 0.3s ease;
 }
 
 .spoiler:hover {
-  color: black;            /* revealed text color */
-  background-color: white; /* keep background the same */
+  color: inherit;
 }
